<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/set_goals"
            android:icon="@drawable/ic_target"
            android:title="@string/menu_target" />
        <item
            android:id="@+id/nav_bmi_calculator"
            android:icon="@drawable/bmi_calculator_icon"
            android:title="@string/menu_bmi" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

    </group>
</menu>