<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#faf2ed">

    <ImageView
        android:id="@+id/bmiCalculatorImage"
        android:layout_width="366dp"
        android:layout_height="278dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bmi_calculator_illustration"
        android:scaleType="fitCenter"
        android:src="@drawable/womenrunning"/>

    <TextView
        android:id="@+id/bmiCalculatorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmiCalculatorImage"
        android:layout_centerHorizontal="true"
        android:text="@string/bmi_calculator"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#11161C"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/bmiCalculatorDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmiCalculatorTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/bmi_calculator_description"
        android:textSize="18sp"
        android:textColor="#11161C"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/bmiCalculatorDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmiCalculatorDescription"
        android:layout_centerHorizontal="true"
        android:text="@string/bmi_calculator_demo"
        android:textSize="24sp"
        android:textColor="#11161C"
        android:layout_marginTop="24dp"/>
    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textSize="18sp"
        android:layout_marginBottom="32dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:backgroundTint="#ecc3d6"
        android:textColor="#11161C"/>
</RelativeLayout>