<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#9bcbcb">

    <ImageView
        android:id="@+id/goalSettingImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/goal_setting_illustration"
        android:src="@drawable/stretchinggirl" />

    <TextView
        android:id="@+id/goalSettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goalSettingImage"
        android:layout_centerHorizontal="true"
        android:text="@string/goal_setting"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#11161C"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/goalSettingDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goalSettingTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/goal_setting_description"
        android:textSize="18sp"
        android:textColor="#11161C"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/goalSettingDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goalSettingDescription"
        android:layout_centerHorizontal="true"
        android:text="@string/goal_setting_demo"
        android:textSize="24sp"
        android:textColor="#11161C"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/finish"
        android:textSize="18sp"
        android:layout_marginBottom="32dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:backgroundTint="#ebd84b"
        android:textColor="#11161C"/>

</RelativeLayout>