<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fitpulse.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/set_goals"
        android:name="com.example.fitpulse.ui.setgoals.SetGoalsFragment"
        android:label="Set Goals"
        tools:layout="@layout/fragment_setgoals" />

    <fragment
        android:id="@+id/nav_bmi_calculator"
        android:name="com.example.fitpulse.ui.bmi.BMIFragment"
        android:label="@string/menu_bmi"
        tools:layout="@layout/bmi_fragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.fitpulse.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>