<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light_purple_color">

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/welcome_illustration"
        android:src="@drawable/fitpulsewelcome" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeImage"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_fitpulse"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#11161C"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/welcomeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_description"
        android:textSize="18sp"
        android:textColor="#11161C"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeDescription"
        android:layout_centerHorizontal="true"
        android:text="@string/get_started"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:backgroundTint="#C0DAFF"
        android:textColor="#11161C"/>

</RelativeLayout>